--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@
     font-family: 'Lato', sans-serif;
     font-size: 24px;
 }
+
 .navbar-nav {
     margin-right: 100px;
 }
@@ -31,6 +32,10 @@
 }
 .navbar-colour {
     background-color: #27374D;
+}
+
+.information-container {
+    padding-bottom: 3rem;
 }
 .introduction-subtext {
     width: 40%;
@@ -54,12 +59,16 @@
     width: 150px;
     border-radius: 50%;
 }
-
+.skills {
+    padding-top: 2rem;
+    padding-bottom: 4rem;
+    background-color: #27374D;
+}
 .skills-text {
     text-align: center;
     font-family: 'Bitter', serif;
     font-size: 40px;
-    color: #27374D;
+    color: #DDE6ED;
 }
 .skills-title {
     font-family: 'Lato', sans-serif;
@@ -102,6 +111,10 @@
         font-size: 1rem;
     }
     
+}
+.slideshow-container {
+    padding-top: 2rem;
+    padding-bottom: 3rem;
 }
 .slideshow-title {
     text-align: center;
